--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 tensorflow==2.13.0
-librosa
-numpy
-pandas
-matplotlib
-scikit-learn
-jupyter
-ipython
+librosa==0.10.0
+numpy==1.24.3
+pandas==2.0.3
+matplotlib==3.7.2
+scikit-learn==1.3.0
+soundfile==0.12.1
+PyQt6==6.6.1
+PyQtDarkTheme==2.1.0
+Pillow==10.0.0
