--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pandas==2.0.3
 matplotlib==3.7.2
 scikit-learn==1.3.0
 soundfile==0.12.1
-PyQt6==6.6.1
-PyQtDarkTheme==2.1.0
+PyQt6
+PyQt6-Charts
 Pillow==10.0.0
+streamlit
